--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 </head>
 <body>
 
+<div class="scroll">
+
 <header id="header">
     <div class="container">
         <div class="header--general">
@@ -156,136 +158,6 @@
         </div>
     </div>
 </section>
-
-
-<!--<section id="hero">-->
-<!--    <div class="container">-->
-<!--        <div class="hero">-->
-<!--            <div class="hero&#45;&#45;left2">-->
-<!--                <p>Product Growth Solution in Single Platform.</p>-->
-<!--                <h1>Managing business <br>-->
-<!--                    payments has never <br>-->
-<!--                    been easier</h1>-->
-<!--                <h4>Never at water me might. On formed merits hunted unable <br> merely by mr whence or. Possession the unpleasing simplicity-->
-<!--                    <br> her uncommonly.</h4>-->
-<!--            </div>-->
-<!--                <div class="hero&#45;&#45;block">-->
-<!--                    <div class="hero&#45;&#45;block__text">-->
-<!--                        <div class="hero&#45;&#45;block__text&#45;&#45;address">-->
-<!--                            <h5>Register using email address</h5>-->
-<!--                            <h4>shakir260@gmail.com</h4>-->
-<!--                        </div>-->
-<!--                        <button class="jol">Submit</button>-->
-<!--                </div>-->
-<!--                </div>-->
-<!--            <div class="hero&#45;&#45;food">-->
-<!--                <div class="hero&#45;&#45;food__soul">-->
-<!--                    <h1><ion-icon name="checkmark-circle"></ion-icon>Free Register</h1>-->
-<!--                </div>-->
-
-<!--                <div class="hero&#45;&#45;food__soul">-->
-<!--                   <h1><ion-icon name="checkmark-circle"></ion-icon> Great Service</h1>-->
-<!--                </div>-->
-<!--            </div>-->
-
-<!--            <div class="hero&#45;&#45;right">-->
-<!--                <div class="hero&#45;&#45;right__block">-->
-<!--                    <div class="hero&#45;&#45;right__block&#45;&#45;block1">-->
-<!--                        <p class="hero&#45;&#45;right__block&#45;&#45;block1__text">Followers</p>-->
-<!--                        <div class="hero&#45;&#45;right__block&#45;&#45;block1__item">-->
-<!--                            <div class="hero&#45;&#45;right__block&#45;&#45;block1__item&#45;&#45;tex">-->
-<!--                                <h5>9,350</h5>-->
-<!--                                <p> <ion-icon name="arrow-up-outline"></ion-icon>8.46%</p>-->
-<!--                            </div>-->
-
-<!--                            <input type="range">-->
-<!--                        </div>-->
-
-
-<!--                    </div>-->
-<!--                    <div class="hero&#45;&#45;right__block&#45;&#45;block1">-->
-<!--                        <p class="hero&#45;&#45;right__block&#45;&#45;block1__text">Followers</p>-->
-<!--                        <div class="hero&#45;&#45;right__block&#45;&#45;block1__item">-->
-<!--                            <div class="hero&#45;&#45;right__block&#45;&#45;block1__item&#45;&#45;tex">-->
-<!--                                <h5>140,948</h5>-->
-<!--                                <p> <ion-icon name="arrow-up-outline"></ion-icon>11.28%</p>-->
-<!--                            </div>-->
-<!--                            <input type="range">-->
-
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="hero&#45;&#45;right__navbar">-->
-<!--                    <div class="hero&#45;&#45;right__product">-->
-<!--                        <div class="hero&#45;&#45;right__product&#45;&#45;left">-->
-<!--                            <p>Total Balance</p>-->
-<!--                            <h6>$4,200</h6>-->
-<!--                            <div>-->
-<!--                                <img src="./img/Group%20145.svg" alt="img" class="hero&#45;&#45;right__product&#45;&#45;left__img">-->
-
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="hero&#45;&#45;right__main">-->
-<!--                        <div class="hero&#45;&#45;right__main&#45;&#45;bar">-->
-<!--                            <h5>Recent Product</h5>-->
-<!--                            <button>Live Preview</button>-->
-<!--                        </div>-->
-<!--                        <div class="hero&#45;&#45;right__main&#45;&#45;block&#45;&#45;two">-->
-<!--                            <img src="./img/line.svg" alt="img" class="hero&#45;&#45;right__main&#45;&#45;block&#45;&#45;two__images">-->
-<!--                        </div>-->
-<!--                        <div class="hero&#45;&#45;right__main&#45;&#45;blockss">-->
-<!--                            <div class="hero&#45;&#45;right__main&#45;&#45;from">-->
-<!--                                <div class="hero&#45;&#45;right__main&#45;&#45;from__reach">-->
-<!--                                    <img src="./img/Rectangle%2044.svg" alt="img"-->
-<!--                                         class="hero&#45;&#45;right__main&#45;&#45;from__reach&#45;&#45;imag">-->
-<!--                                    <p>Reach</p>-->
-<!--                                    <div>-->
-<!--                                        <button>21.4%</button>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                                <h3>122,637</h3>-->
-<!--                                <h6>From last 7 days</h6>-->
-<!--                            </div>-->
-<!--                            <div class="hero&#45;&#45;right__main&#45;&#45;from">-->
-<!--                                <div class="hero&#45;&#45;right__main&#45;&#45;from__reach">-->
-<!--                                    <img src="./img/Rectangle%2044.svg" alt="img"-->
-<!--                                         class="hero&#45;&#45;right__main&#45;&#45;from__reach&#45;&#45;imag">-->
-<!--                                    <p>Reach</p>-->
-<!--                                    <div>-->
-<!--                                        <button>21.4%</button>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                                <h3>122,637</h3>-->
-<!--                                <h6>From last 7 days</h6>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="hero&#45;&#45;right__navbar&#45;&#45;march">-->
-<!--                        <p>March 24, 02:00PM</p>-->
-<!--                        <h3>122,637</h3>-->
-<!--                        <button>21.4%</button>-->
-<!--                    </div>-->
-<!--                    <img src="./img/62.svg" alt="img" class="hero&#45;&#45;right__navbar&#45;&#45;photo">-->
-<!--                    <div class="hero&#45;&#45;right__navbar&#45;&#45;prof">-->
-<!--                        <div class="hero&#45;&#45;right__navbar&#45;&#45;prof__profile">-->
-<!--                            <img src="./img/krug.svg" alt="img">-->
-<!--                            <div class="hero&#45;&#45;right__navbar&#45;&#45;prof__profile&#45;&#45;texts">-->
-<!--                                <h5>+ $28,900</h5>-->
-<!--                                <p>Received from Michael V</p>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-
-
-<!--        </div>-->
-<!--            </div>-->
-
-<!--        <hr>-->
-
-<!--</section>-->
 
 <section id="all">
     <div class="container">
@@ -737,7 +609,7 @@
 </footer>
 
 
-
+</div>
 
 
 
